# hs-all-in-one

./: ChangeLog.md  EnvFromTxt.hs  Main.hs  hs-all-in-one.cabal
test/: Foo.hs  Main.hs
