cabal-version:       2.0
name:                hs-all-in-one
version:             0.1
synopsis:            Merges multiple Haskell modules into one
-- description:
license:             MIT
license-file:        LICENSE
author:              Joachim Breitner
maintainer:          mail@joachim-breitner.de
copyright:           2017 Joachim Breitner
homepage:            http://github.com/nomeata/hs-all-in-one
category:            Language
build-type:          Simple
extra-source-files:  ChangeLog.md

executable hs-all-in-one
  main-is:             Main.hs
  build-depends:       base ^>=4.15.1.0,
                       haskell-src-exts ^>=1.23.1,
                       haskell-names ^>=0.9.9,
                       hse-cpp ^>=0.2,
                       syb ^>=0.7.2.2,
                       hashable ^>=1.3.5.0,
                       containers, mtl
  default-language:    Haskell2010
